vlib/v/checker/tests/check_wrong_usage_of_break_and_continue.vv
struct Test {
	a string
	b string
}

fn main() {
	$for field in Test.fields {
		println(field)
		continue
	}
	$for field in Test.fields {
		println(field)
		break
	}
	{
		break
		continue
	}
}
